--- a/src/app.postcss
+++ b/src/app.postcss
@@ -7,6 +7,7 @@
 body {
   background-color: white;
   color: black;
+  min-height: 100vh;
 }
 
 /* Add styles for the dark mode version of your app */
